--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: Oroshi_X
 github_username:  OroshiX
-
+github: [metadata]
 # Build settings
 markdown: kramdown
-theme: minima
+theme: jekyll-theme-architect
 plugins:
   - jekyll-feed
 
