--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: OroshiX
+tagline: 'Personal site'
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   This is where I will put my CV, experiences, and other things...
@@ -30,6 +31,18 @@ markdown: kramdown
 theme: jekyll-theme-architect
 plugins:
   - jekyll-feed
+  - jekyll-paginate
+#  - jekyll-mermaid
+#mermaid:
+#  src: '/js/mermaid.min.js'
+paginate: 5
+paginate_path: "/blog/page:num/"
+
+# Permalinks
+#
+# Use of `relative_permalinks` ensures post links from the index work properly.
+permalink:           pretty
+
 defaults:
   -
     scope:
