--- a/_config.yml
+++ b/_config.yml
@@ -37,6 +37,7 @@ plugins:
 #  - jekyll-mermaid
 #mermaid:
 #  src: '/js/mermaid.min.js'
+excerpt_separator: "<!-- more -->"
 paginate: 5
 paginate_path: "/blog/page:num/"
 permalink:           pretty
