--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 #  Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://oroshix.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-my_url: "oroshix.github.io"
+my_url: "https://oroshix.github.io"
 twitter_username: Oroshi_X
 github_username:  OroshiX
 github: [metadata]
