--- a/_data/skills.yml
+++ b/_data/skills.yml
@@ -1,11 +1,15 @@
 programming:
   - name: Java
+    code: java
     percent: 95
   - name: Kotlin
+    code: kotlin
     percent: 70
   - name: Angular
+    code: angular
     percent: 60
   - name: Android
+    code: android
     percent: 98
 
 language:
