--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,6 +4,8 @@
     "build": "rimraf dist && webpack --config webpack.config.js --progress --profile --bail"
   },
   "dependencies": {
+    "@types/node": "^13.7.1",
+    "abcjs": "^5.12.0",
     "awesome-typescript-loader": "^5.2.1",
     "source-map-loader": "^0.2.4"
   },
